# raster-benchmarks

./: .gitignore  Cargo.toml  README.md
.cursor/skills/output-review/: SKILL.md
.cursor/skills/output-work/: SKILL.md
apps/: README.md
apps/challenger/: Cargo.toml
apps/challenger/src/: main.rs
apps/claimer/: Cargo.toml
apps/claimer/src/: main.rs
apps/runner/: Cargo.toml
apps/runner/src/: main.rs
apps/web-server/: Cargo.toml
apps/web-server/src/: main.rs
apps/workloads/l2-kona-poc/: Cargo.toml
apps/workloads/l2-kona-poc/src/: chunk_driver.rs  chunk_plan.rs  main.rs
apps/workloads/raster-hello/: Cargo.toml
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol  README.md
contracts/src/: ClaimVerifier.sol
contracts/src/interfaces/: IClaimVerifier.sol
contracts/test/: ClaimVerifier.t.sol  README.md
crates/shared/: Cargo.toml
crates/shared/src/: anvil.rs  challenger.rs  claimer.rs  contract.rs  da.rs  deploy.rs  input_package.rs  lib.rs  raster_workload.rs  run.rs
crates/shared/tests/: blob_registry.rs  run_fixtures.rs
docs/: local-setup.md
docs/specs/: README.md  l2-kona-workload.md  local-e2e-scenarios.md  run-schema.md  smart-contracts.md  web-api.md
fixtures/l2-poc/: rollup-config-v1.json  synthetic-fixture-seed-v1.json  synthetic-witness-bundle-v1.json  synthetic-witness-closure-manifest-v1.json  witness-bundle-v1.json  witness-closure-manifest-v1.json
fixtures/l2-poc/synthetic-witness-kv-v1-block-26207960/: LOG  LOG.old.1773786618333347  LOG.old.1773786659437933  LOG.old.1773786743444257  LOG.old.1773786769669226  LOG.old.1773795649169883  LOG.old.1773795663744433  LOG.old.1773795669394503  LOG.old.1773795670204526  LOG.old.1773795693366366  LOG.old.1773805874923090  LOG.old.1773805886278589  LOG.old.1773805895380651  LOG.old.1773837905736192  LOG.old.1773838203690430  MANIFEST-000102
fixtures/l2-poc/synthetic-witness-kv-v1-block-26207961/: 000008.sst  LOG.old.1773786634750562  LOG.old.1773786685541398  LOG.old.1773786743453118  LOG.old.1773786769674996  LOG.old.1773795498750344  LOG.old.1773795649175065  LOG.old.1773795669398987  LOG.old.1773795670209088  LOG.old.1773805895385016  LOG.old.1773805993366839  LOG.old.1773806004893701  LOG.old.1773837905740197  LOG.old.1773838203694939  MANIFEST-000102
fixtures/l2-poc/synthetic-witness-kv-v1-block-26207962/: 000008.sst  LOG  LOG.old.1773786634755298  LOG.old.1773786743457625  LOG.old.1773786769679038  LOG.old.1773795498754457  LOG.old.1773795670212833  LOG.old.1773795693374877  LOG.old.1773796093178234  LOG.old.1773805895388809  LOG.old.1773805993370136  LOG.old.1773806004897204  MANIFEST-000102
fixtures/l2-poc/synthetic-witness-kv-v1-block-26207963/: LOG  LOG.old.1773786634759298  LOG.old.1773786685549620  LOG.old.1773786769683270  LOG.old.1773795632250896  LOG.old.1773795649182934  LOG.old.1773795663756535  MANIFEST-000102  (+7 more)
runs/: 2026-03-06T22-01-14-stub-honest.json  2026-03-06T22-01-23-stub-dishonest.json  2026-03-06T23-47-35-stub-honest.json  2026-03-06T23-47-42-hello-raster-honest.json  2026-03-06T23-48-42-stub-honest.json  2026-03-06T23-48-44-stub-dishonest.json  2026-03-06T23-50-38-stub-honest.json  2026-03-06T23-50-43-stub-dishonest.json  2026-03-07T12-15-15-stub-honest.json  2026-03-12T18-09-56-stub-honest.json  2026-03-12T18-10-26-stub-dishonest.json  2026-03-13T17-47-54-raster-hello-honest.json  2026-03-13T17-50-16-raster-hello-honest.json  2026-03-13T18-09-09-raster-hello-honest.json  2026-03-13T18-27-48-raster-hello-dishonest.json  2026-03-13T18-28-10-raster-hello-honest.json  2026-03-13T18-28-49-raster-hello-dishonest.json
runs/blob-index/: 2026-03-13T18-09-09-raster-hello-honest.json  2026-03-13T18-27-48-raster-hello-dishonest.json  2026-03-13T18-28-10-raster-hello-honest.json  2026-03-13T18-28-49-raster-hello-dishonest.json
runs/fixtures/: README.md  l2-kona-poc-dishonest.json  l2-kona-poc-honest.json  l2-poc-plan7-fixture.json  l2-poc-synth-chunk-plan-v1.json  l2-poc-synth-fixture.json  raster-hello-dishonest.json  raster-hello-honest.json
scripts/: check_l2_kona_strict.sh  generate_l2_poc_chunk_plan.sh  generate_l2_poc_synthetic_fixture.py  generate_l2_poc_witness_manifest.py
web/: README.md  index.html
web/scenario-runner/: index.html
web/settlement-estimator/: index.html
(+185 files in other folders)
