[workspace]
members = [
    "apps/claimer",
    "apps/challenger",
    "apps/runner",
    "apps/web-server",
    "crates/shared",
]
resolver = "2"

[workspace.dependencies]
alloy = { version = "1", features = [
    "providers",
    "provider-http",
    "signers",
    "signer-local",
    "contract",
    "sol-types",
    "json-abi",
    "transports",
    "transport-http",
    "node-bindings",
    "json",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
