[workspace]
members = [
    "apps/claimer",
    "apps/challenger",
    "apps/runner",
    "apps/web-server",
    "apps/workloads/l2-kona-poc",
    "apps/workloads/raster-hello",
    "crates/shared",
]
resolver = "2"

[workspace.dependencies]
alloy = { version = "1", features = [
    "consensus",
    "providers",
    "provider-http",
    "signers",
    "signer-local",
    "contract",
    "sol-types",
    "json-abi",
    "transports",
    "transport-http",
    "node-bindings",
    "json",
    "eips",
    "kzg",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
eyre = "0.6"
