[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../crates/shared" }
alloy = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
