[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
axum = "0.7"
shared = { path = "../../crates/shared" }
tokio = { workspace = true }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
chrono = "0.4"
