[package]
name = "workload-l2-kona-poc"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
alloy-consensus = "1.0.23"
alloy-eips = "1.0.30"
alloy-op-evm = "0.14.0"
alloy-primitives = "1.2.1"
alloy-rlp = "0.3.12"
alloy-rpc-types-engine = "1.0.23"
kona-executor = "0.4.0"
kona-genesis = { version = "0.4.0", features = ["serde"] }
kona-mpt = "0.3.0"
op-alloy-rpc-types-engine = "0.18.14"
rocksdb = "0.23.0"
thiserror = "2.0.18"
